# GLFWtest

./: CMakeLists.txt  build.ninja
src/: main.cpp
